# WindowWrapper

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: FindWaylandClient.cmake
examples/: CMakeLists.txt  SimpleWindow.cpp  VulkanTriangel.cpp
examples/SimpleWindow/: CMakeLists.txt  SimpleWindow.cpp
examples/VulkanTriangle/: CMakeLists.txt  VulkanTriangle.cpp
include/: WindowWrapper.hpp
include/Common/: Callback.hpp  Event.hpp  IPlatformWindow.hpp  IPlatformWindowBase.hpp  IWindow.hpp  InternalEvent.hpp  Noncopybale.hpp  Vector.hpp  VectorT.hpp  Vulkan.hpp  Window.hpp  WindowParams.hpp
include/WinWrap/: WindowWrapper.hpp
include/WinWrap/Common/: Callback.hpp  Clock.hpp  IPlatformWindow.hpp  IWindow.hpp  InternalEvent.hpp  Noncopyable.hpp  Noncopybale.hpp  Time.hpp  Types.hpp  Vector.hpp  Vulkan.hpp  Window.hpp  WindowParams.hpp
src/: WindowWrapper.hpp  main.cpp  mian.cpp
src/Common/: Clock.cpp  Event.hpp  IPlatformWindowBase.hpp  IWindow.hpp  IWindowBase.hpp  InputUtils.hpp  Types.hpp  Vector.cpp  VectorT.cpp  VectorT.hpp  VulkanUtils.hpp  WinWrap.hpp  Window.cpp  Window.hpp  WindowParams.hpp
src/LinuxWindow/: InputUtils.cpp  VulkanUtils.cpp  X11Window.cpp  X11Window.hpp
src/WinApiWindow/: InputUtils.cpp  VulkanUtils.cpp  WAWindow.cpp  WAWindow.hpp
src/X11Window/: VulkanUtils.cpp  X11Window.cpp  X11Window.hpp
